# omniroute_windows_ws

./: .gitignore  LICENSE  README.md  omniroute_windows_ws.code-workspace  run_clean_cmake.bat  run_clean_ws.bat  run_cmake.bat  run_proj_cal.bat  run_proj_disp.bat  run_setup.bat  run_sound_generator.bat  run_ws.bat  scratch.txt  terminal.txt
data/assets/: Earthlings_Toad_Print.ai  Manu_Pirate.ai  Mode.ai  Mon_Number.ai  State_Calibration.ai  Test_Pattern.ai  manu_pirate.pdn  manu_pirate_formatted.pdn
data/assets/misc/: MARKDOWN_SYNTAX.md  quad_vert_plot.asv  quad_vert_plot.m
data/assets/projection_images/: Calibration_Floor_Test_Pattern.ai  Calibration_Floor_UI.ai  Calibration_Manu_Pirate.ai  Calibration_Test_Pattern_Wall.ai  Calibration_UI_CalMode.ai  Calibration_UI_MonInd.ai  Calibration_UI_Param.ai  Calibration_UI_State.ai  README.md  Runtime_Floor_Pattern.afdesign  Runtime_Floor_Pattern.afdesign~lock~  Runtime_Floor_Shapes.ai  Runtime_Shapes.ai  Runtime_Shapes_Outlined.ai  Runtime_Shapes_Wall.ai  Runtime_Wall_Shapes.ai  Runtime_Wall_Shapes_v2.ai  Runtime_Wall_Shapes_v3.ai
data/assets/projection_images/adobe_illustrator/: Calibration_Wall_Test_Pattern.ai  Calibration_Wall_UI.ai
data/assets/projection_images/affinity_designer/: Runtime_Floor_Patterns.afdesign  Runtime_Floor_Patterns.afdesign~lock~  Runtime_Wall_Shapes.afdesign  Runtime_Wall_Shapes.afdesign~lock~
data/assets/projection_images/z_obs_arc/: Calibration_Test_Pattern.ai  Calibration_UI_Mon.ai
data/assets/z_obs_arc/: 1.pdn
data/csv_configs/: blank_config.csv
data/proj_cfg/: cfg_0.xml  cfg_1.xml  cfg_c0_m0.xml  cfg_c0m0.xml  cfg_c1_m0.xml  cfg_c1m0.xml  cfg_m0_c0.xml  cfg_m0_c1.xml  cfg_m1_c0.xml  cfg_m1_c1.xml  cfg_m1_c2.xml  cfg_m2_c0.xml  cfg_m2_c1.xml  cfg_m2_c2.xml  proj_cfg.xml
data/proj_cfg - Copy/: cfg_m1_c2.xml
data/proj_cfg_no_trans/: cfg_m2_c2.xml
data/projection/params/: cfg_m0_c1.xml  cfg_m0_c1_cp.xml  cfg_m0_c1_hmat.xml  cp_p0.xml  cp_p1.xml  cp_p2.xml  cp_p3.xml  hmats_m0 copy 2.xml  hmats_m0.xml  hmats_m1.xml  hmats_m2.xml  hmats_p0.xml  hmats_p1.xml  hmats_p2.xml  hmats_p3.xml  maze_vertices.xml
data/projection/params copy/: hmats_m0.xml  hmats_m2.xml  maze_vertices.xml
data/projection/params_backup_23_12_29/: cp_p1.xml  cp_p2.xml  hmats_p0.xml  hmats_p2.xml  maze_vertices.xml
data/z_obs_arc/: hmats_m0 copy.xml  hmats_m9.xml
data/z_obs_arc/proj_cfg - Copy/: cfg_m1_c1.xml
data/z_obs_arc/proj_cfg_no_trans/: cfg_m0_c0.xml
devel/: .catkin  .rosinstall  _setup_util.py  setup.bat
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/common_utils/: package.xml
src/common_utils/src/: projection_utils.cpp  projection_utils.h
src/goodbuy_world_pkg/: CMakeLists.txt  package.xml
src/goodbuy_world_pkg/src/: goodbuy_world_node.cpp
src/proj_pkg_test/: CMakeLists.txt  CMakeLists_default.txt  CMakeLists_v1.txt  CMakeLists_v2.txt  README.md  package.xml
src/proj_pkg_test/src/: proj_pkg_test.code-workspace  proj_pkg_test.cpp  proj_pkg_test.h
src/projection_calibration/: CMakeLists.txt  README.md  package.xml  projection_calibration.code-workspace
src/projection_calibration/lib/glad/: glad.c
src/projection_calibration/src/: projection_calibration.cpp  projection_calibration.h  projection_calibration_modified.cpp
src/projection_display/: CMakeLists.txt  package.xml
src/projection_operation/: CMakeLists.txt  README.md  mi_projector_setup.md  package.xml
src/projection_operation/include/: projection_calibration copy.h  projection_calibration.h  projection_config.h  projection_display.h  projection_display_old.h  projection_utils.h  scratch.h
src/projection_operation/src/: optitrack_stream_test.cpp  projection_calibration copy.cpp  projection_calibration.cpp  projection_display.cpp  projection_display_old.cpp  projection_utils.cpp  scratch.cpp
src/projection_operation/src/projection_sender/: projection_sender.py
src/projection_operation/src/projection_sender/data/image_config/: a_walls_template.csv  walls_cfg_0.csv
src/projection_operation/src/projection_sender/data/wall_cofig/: template.csv  test1.csv  test2.csv
src/projection_operation/src/sound_generator/: make_tone_clips.py  sound_generator.py
